--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,6 +1,8 @@
 [xdebug]
-xdebug.mode=debug,develop
+#xdebug.mode=debug,develop
+xdebug.mode=debug
 xdebug.start_with_request=yes
 xdebug.client_host=host.docker.internal
-xdebug.client_port=9003
+xdebug.client_port=9001
 xdebug.log=/tmp/xdebug.log
+xdebug.idekey=PHP8
